fix: thread not starting and ollama not responding